a.replaceChild(a, a) should throw a HierarchyRequestError https://bugs.webkit.org/show_bug.cgi?id=160640

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline W3C test now that one more check is passing.

* web-platform-tests/dom/nodes/Node-replaceChild-expected.txt:

Source/WebCore:

a.replaceChild(a, a) should throw a HierarchyRequestError, because 'a'
is a host-including inclusive ancestor of 'a':
- https://dom.spec.whatwg.org/#concept-node-replace

However, the call is merely ignored in WebKit.

No new tests, rebaselined existing test.

* dom/ContainerNode.cpp:
(WebCore::ContainerNode::replaceChild):

LayoutTests:

* fast/dom/Node/replaceChild-notFoundError-expected.txt: Added.
* fast/dom/Node/replaceChild-notFoundError.html: Added.


Canonical link: https://commits.webkit.org/178769@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204237 268f45cc-cd09-0410-ab3c-d52691b4dbfc